# dtool-lookup-gui

./: .coverage  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE-MIT.md  LICENSE.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  TRIAGE.md  dtool-gui.py  dtool-lookup-gui.spec  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: build-and-publish.yml  build-installer-on-windows.yml  build-on-macos.yml  build-on-ubuntu.yml  build-on-windows.yml  coverage.yml  main.yml  publish-on-pypi.yml  test.yml
data/icons/: README.md  dtool_logo.icns  dtool_logo_small.icns
doc/: INSTALL.rst  ubuntu-18.04-python-3.6.sh  ubuntu-18.04-python-3.8.sh
docs/: requirements.txt
docs/source/: api.rst  conf.py  dataset.md  index.rst  story.rst
dtool_gui/: Dependencies.py  GraphWidget.py  LookupClient.py  MainApplication.py  SimpleGraph.py  __main__.py  de.uni-freiburg.dtool-gui.gschema.xml  dtool-gui.glade
dtool_lookup_gui/: Dependencies.py  DirectTab.py  GraphWidget.py  LookupClient.py  LookupTab.py  MainApplication.py  SettingsDialog.py  SimpleGraph.py  TransferTab.py  __init__.py  __main__.py  de.uni-freiburg.dtool-lookup-gui.gresource.xml  de.uni-freiburg.dtool-lookup-gui.gschema.xml  dtool-lookup-gui.glade  dtool_gtk.py  dtool_tk_models.py  launcher.py  main.py  models.py  version.py
dtool_lookup_gui/models/: __init__.py  base_uris.py  dataset.py  datasets.py  dtool_tk_metadata.py  dtool_tk_models.py  search_state.py  settings.py  simple_graph.py
etc/: dtool-lookup-gui.desktop
glade/: README
maintenance/: README.md  authors_alphabetical.py  collect_number_of_tests.py  convert_icons.sh  copy_files_into_folders.sh  custom_build_backend.py  gio_appinfo.py  patch_dtool_cli_compat.py  set_launcher_icon.sh  soft_link_launcher.sh  update_license_headers.sh
pyinstaller/: MANIFEST.general  MANIFEST.linux  MANIFEST.linux-release  MANIFEST.macos  MANIFEST.macos-release  MANIFEST.windows  MANIFEST.windows-installer  MANIFEST.windows-installer-release  README.md  dtool-lookup-gui-debug.spec  dtool-lookup-gui-linux-one-file.spec  dtool-lookup-gui-linux.spec  dtool-lookup-gui-macos-one-file.spec  dtool-lookup-gui-macos.spec  dtool-lookup-gui-one-file.spec  dtool-lookup-gui-windows-one-file.spec  dtool-lookup-gui-windows.spec  dtool-lookup-gui.spec  mingw64_full_requirements.txt  mingw64_pacman_Q.txt  mingw64_pacman_S.txt  mingw64_requirements.in  mingw64_requirements.txt  mingw64_venv_pip_freeze.txt  mingw64_venv_pip_freeze_local.txt  mingw64_venv_requirements.txt  regenerate_system_setup_reference_files.sh  run.sh
test/: conftest.py  test_app.py  test_configuration_dialogs.py  test_copy_manager.py  test_dataset_name_dialog.py  test_dependency_graph.py  test_dialogs.py  test_graph_widget.py  test_init_helpers.py  test_log_window.py  test_logging.py  test_main_app_actions.py  test_main_window_action_refactors.py  test_main_window_actions.py  test_main_window_handlers.py  test_main_window_missing_actions.py  test_models.py  test_progress_chart.py  test_progressbar.py  test_row_widgets.py  test_search_state.py  test_settings_dialog.py  test_simple_graph.py  test_utils.py
win/: check-crlf.bat  dtool-lookup-gui.iss  file_version_info.txt
(+118 files in other folders)
