[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dtool-lookup-gui"
packages = ["dtool_lookup_gui"]
authors = [
    {name = "Johannes L. Hoermann", email = "johannes.hoermann@imtek.uni-freiburg.de"},
    {name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de"},
]
description = "Graphical user interface for dtool"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["research data management", "dtool"]
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",

]

dynamic = ["version"]

dependencies = [
    'dtoolcore>=3.17',
    'dtool-create>=0.23.4',
    'dtool-info>=0.16.2',
    'dtool-lookup-api>=0.7.0',
    'aiohttp>=3.6',
    'gbulb>=0.6',
    'pyyaml>=5.3',
    'ruamel.yaml',
    'PyGObject>=3.36',
    'scipy>=1.5',
    'numpy',
    'jwt',
    'yamllint'
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-flake8",
]

[project.urls]
documentation = "https://dtool-lookup-gui.readthedocs.io"
repository = "https://github.com/livMatS/dtool-lookup-gui"
changelog = "https://dtool-lookup-gui.readthedocs.io/en/latest/changelog.html"

[tool.setuptools_scm]
version_file = "dtool_lookup_gui/version.py"