[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "custom_build_backend"
backend-path = ["maintenance"]


[project]
name = "dtool-lookup-gui"
authors = [
    {name = "Johannes L. Hoermann", email = "johannes.hoermann@imtek.uni-freiburg.de"},
    {name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de"},
]
description = "Graphical user interface for dtool"
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["research data management", "dtool"]
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",

]

dynamic = ["version"]

dependencies = [
    'dtoolcore>=3.19.0',
    'dtool-create>=0.23.4',
    'dtool-info>=0.16.2',
    'dtool-lookup-api>=0.10.1',
    'aiohttp>=3.6',
    'pyyaml>=5.3',
    'ruamel.yaml',
    'PyGObject>=3.50',
    'scipy>=1.5',
    'numpy',
    'jwt',
    'yamllint'
]

[project.optional-dependencies]
test = [
    "dtool-s3",
    "dtool-smb",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-flake8",
    "pytest-xdist",
]

[project.urls]
documentation = "https://dtool-lookup-gui.readthedocs.io"
repository = "https://github.com/livMatS/dtool-lookup-gui"
changelog = "https://dtool-lookup-gui.readthedocs.io/en/latest/changelog.html"

[project.scripts]
dtool-gui = "dtool_lookup_gui.main:run_gui"

[tool.setuptools.packages.find]
where = ["."]
include = ["dtool_lookup_gui*"]
namespaces = true

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "dtool_lookup_gui/version.py"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=dtool_lookup_gui --cov-report html"
